SolucionCloud/nodeporttest.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service
spec:
  type: NodePort
  selector:
    app: devops-api   # Debe coincidir con los pods que quieres exponer
  ports:
    - protocol: TCP
      port: 80        # Puerto interno del servicio
      targetPort: 8080 # Puerto donde escucha el contenedor
      nodePort: 31080  # Puerto expuesto en el nodo (opcional, si no lo pones se asigna automáticamente)
