SolucionCloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-api-svc
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: devops-api
  ports:
  - name: http
    port: 80
    targetPort: 8080
