SolucionCloud/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-api-ing
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: app.example.com
    http:
      paths:
      - path: /DevOps
        pathType: Prefix
        backend:
          service:
            name: devops-api-svc
            port:
              number: 80
      - path: /healthz
        pathType: Prefix
        backend:
          service:
            name: devops-api-svc
            port:
              number: 80
              
  - host: demo-aks-dev-appgw.eastus.cloudapp.azure.com   # <---- AGREGAR ESTO
    http:
      paths:
      - path: /DevOps
        pathType: Prefix
        backend:
          service:
            name: devops-api-svc
            port:
              number: 80
      - path: /healthz
        pathType: Prefix
        backend:
          service:
            name: devops-api-svc
            port:
              number: 80
